[package]
name = "esp32-config-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
serde-big-array = "0.5.1"
#rclrs = "*"
#ros2_esp32_interfaces = { git = "https://github.com/xRetry/ros2-esp32-interfaces.git" }
rustdds = "0.7.11"
ros2-client = "0.3.0"
mio = "0.6.23"
mio-extras = "2.0.6"
